--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</div>
 				</li>
 				<li>
-					<p><span>Summary: </span>I have started learn Front-End Development not so long ago. As I have already known Front-end web development is a great place to start your journey into the world of coding. I learned the basics of HTML and CSS from from Anna Block’s course. I always strive to learn something new. I study hard and learn new materials fast. So that’s why I’m gonna learn JavaScript, because JavaScript is a great language and it is incredibly practical to learn at some point in your programming experience.</p>
+					<p><span>Summary: </span>I have started learn Front-End Development not so long ago. As I have already known Front-end web development is a great place to start my journey into the world of coding. I learned the basics of HTML and CSS from from Anna Block’s course. I always strive to learn something new. I study hard and learn new materials fast. So that’s why I’m gonna learn JavaScript, because JavaScript is a great language and it is incredibly practical to learn at some point in my programming experience.</p>
 				</li>
 				<li>
 					<p><span>Skills: </span></p>
